--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "list": "cpp",
         "vector": "cpp",
         "string": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "map": "cpp",
+        "complex": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
