--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "string": "cpp",
         "format": "cpp",
         "map": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "unordered_map": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
