--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,10 @@
     "regex": "cpp",
     "span": "cpp",
     "type_traits": "cpp",
-    "functional": "cpp"
+    "functional": "cpp",
+    "deque": "cpp",
+    "unordered_set": "cpp",
+    "forward_list": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled",
   "C_Cpp_Runner.msvcBatchPath": "",
